sorting snapshots before using them